# Mini-Project-Mini-Project-My-Python-Suite

./: Calc.py  PythonSuite.py  Pythonsutie.py  README.md  Setup.py  UnitConvert.py  funfact.py  pyproject.toml  requirements.txt  setup.py
$HOME/: .pypirc
my_python_suite/: Calc.py  PythonSuite.py  __init__.py  cli.py  setup.py
my_python_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mypythonsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
